--- a/css/app.css
+++ b/css/app.css
@@ -5,10 +5,20 @@ header {
 .main {
 	background-color: #55c8e6;
 	min-height: 600px;
+	-webkit-transition: background-color 500ms linear;
+    -moz-transition: background-color 500ms linear;
+    -o-transition: background-color 500ms linear;
+    -ms-transition: background-color 500ms linear;
+    transition: background-color 500ms linear;
 }
 
 	.main.search-active {
 		background-color: #f2f2f2;
+		-webkit-transition: background-color 500ms linear;
+		-moz-transition: background-color 500ms linear;
+		-o-transition: background-color 500ms linear;
+		-ms-transition: background-color 500ms linear;
+		transition: background-color 500ms linear;
 	}
 
 #search {
@@ -53,6 +63,12 @@ header {
 	width: 30px;
 }
 
+.no-result {
+	color: #919395;
+	border: solid 1px #d0d1d2;
+	padding: 10px;
+}
+
 footer {
 	background-color: #2d2d2e;
 	padding-top: 15px;
@@ -67,3 +83,28 @@ footer {
 	hr {
 		border: solid 1px #58585a;
 	}
+
+/* Foundation override */
+span.postfix {
+	background: #fff;
+	border-left: none;
+	cursor: pointer;
+}
+
+input[type="text"] {
+	border-right: none;
+	box-shadow: none;
+	font-size: 20px;
+}
+
+input[type="text"], .postfix {
+	height: 65px;
+	line-height: 65px;
+}
+
+.hidden {
+	position: absolute;
+	left: -9999px;
+	width: 1px;
+	height: 1px;
+}
